--- a/IOS-2/aula01/Aula-01-IOS-2/Aula-01-IOS-2/Base.lproj/Main.storyboard
+++ b/IOS-2/aula01/Aula-01-IOS-2/Aula-01-IOS-2/Base.lproj/Main.storyboard
@@ -21,8 +21,9 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1ZQ-w7-vI6">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="jpH-4z-UG5">
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="jpH-4z-UG5" userLabel="indicator">
                                 <rect key="frame" x="169" y="315" width="37" height="37"/>
+                                <color key="color" red="0.18968505398619773" green="0.25686160533731806" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
