--- a/Android/OpiniaoDeTudo/app/src/main/res/layout/new_review_form_layout.xml
+++ b/Android/OpiniaoDeTudo/app/src/main/res/layout/new_review_form_layout.xml
@@ -56,8 +56,8 @@
             android:text="Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button_save" android:layout_marginBottom="128dp"
+            android:id="@+id/button_save"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"/>
+            android:layout_marginStart="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
