--- a/Android/OpiniaoDeTudo/app/src/main/res/layout/new_review_form_layout.xml
+++ b/Android/OpiniaoDeTudo/app/src/main/res/layout/new_review_form_layout.xml
@@ -20,7 +20,7 @@
             android:text="@string/form_review_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2" android:layout_marginTop="64dp"
+            android:id="@+id/textView2" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp"/>
     <TextView
@@ -44,20 +44,34 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:ems="10"
+            android:ems="3"
             android:id="@+id/input_review" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent" android:inputType="textMultiLine"
-            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/button_save"
             android:hint="@string/hint_opiniao" android:contentDescription="@string/hint_opiniao"
-    />
+            app:layout_constraintBottom_toTopOf="@+id/label_photo" android:layout_marginBottom="16dp"/>
     <Button
             android:text="Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button_save" android:layout_marginBottom="128dp"
+            android:id="@+id/button_save" android:layout_marginBottom="84dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"/>
+    <TextView
+            android:id="@+id/label_photo"
+            android:text="@string/photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/photo" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"/>
+    <ImageView
+            android:id="@+id/photo"
+            android:layout_width="150dp"
+            android:layout_height="150dp" app:srcCompat="@android:drawable/ic_menu_camera"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/button_save" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
