--- a/Android/OpiniaoDeTudo/app/src/main/res/menu/bottom_menu.xml
+++ b/Android/OpiniaoDeTudo/app/src/main/res/menu/bottom_menu.xml
@@ -2,10 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
             android:id="@+id/menuitem_newitem"
-            android:icon="@android:drawable/ic_menu_add"
+            android:icon="@drawable/ic_action_name"
             android:title="@string/new_item" />
     <item
             android:id="@+id/menuitem_listitem"
             android:icon="@android:drawable/ic_menu_sort_by_size"
             android:title="@string/list_item" />
+
+    <item
+            android:id="@+id/menuitem_settings"
+            android:icon="@drawable/icon_settings"
+            android:title="@string/settings" />
 </menu>
