--- a/Android/OpiniaoDeTudo/app/src/main/res/layout/about_activity.xml
+++ b/Android/OpiniaoDeTudo/app/src/main/res/layout/about_activity.xml
@@ -25,7 +25,8 @@
             android:id="@+id/textView5"
             app:layout_constraintTop_toBottomOf="@+id/autor" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"/>
+            android:textStyle="bold"
+            android:layout_marginTop="4dp"/>
     <TextView
             android:text="@string/label_matricula_autor"
             android:layout_width="0dp"
@@ -38,8 +39,9 @@
             android:text="@string/matricula_autor"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textView7" android:layout_marginTop="8dp"
+            android:id="@+id/textView7" android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
+            android:textStyle="bold"
             android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
